introduce identity framework to host

--- a/ConsoleHost/App.config
+++ b/ConsoleHost/App.config
@@ -7,7 +7,7 @@
   
   <!--Why do we need to add the below mention section -->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=C:\Users\AVISHEK\Documents\Visual Studio 2013\Projects\dotNET_CA\CourseRegistrationSystem\App_Data\aspnet-CourseRegistrationSystem-20150415050731.mdf;Initial Catalog=aspnet-CourseRegistrationSystem-20150415050731;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=D:\dotNET_CA\CourseRegistrationSystem\App_Data\aspnet-CourseRegistrationSystem-20150415050731.mdf;Initial Catalog=aspnet-CourseRegistrationSystem-20150415050731;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.serviceModel>
