--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -487,6 +487,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Class\EditParticipant.cshtml" />
+    <Content Include="Views\IndividualUser\RegistrationDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
