--- a/CourseRegistration.Service/CourseRegistration.Service.csproj
+++ b/CourseRegistration.Service/CourseRegistration.Service.csproj
@@ -98,9 +98,11 @@
     <Compile Include="CourseRegistrationService.svc.cs">
       <DependentUpon>CourseRegistrationService.svc</DependentUpon>
     </Compile>
+    <Compile Include="GetSubsidizedParticipantListByGoodAttendanceActivity.cs" />
     <Compile Include="IAttendanceService.cs" />
     <Compile Include="ICourseRegistrationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendObligationReportToCourseAdminActivity.cs" />
     <Compile Include="UserNamePassValidator.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +113,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="packages.config" />
+    <Content Include="CourseCompletionService.xamlx">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
