--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -298,6 +298,7 @@
     <Content Include="Content\bootstrap-datepicker3.min.css" />
     <Content Include="Content\bootstrap-datepicker3.standalone.css" />
     <Content Include="Content\bootstrap-datepicker3.standalone.min.css" />
+    <Content Include="Content\bootstrap-modal-bs3patch.css" />
     <Content Include="Content\bootstrap-sidebar.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
